--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -807,7 +807,8 @@
                 "add-folder": "Ajouter un dossier",
                 "link-folder": "Lier le dossier",
                 "unlink-folder": "Délier le dossier",
-                "link-all": "Tout lier"
+                "link-all": "Tout lier",
+                "remove-from-the-list": "Retirer de la liste"
             }
         },
         "adding-shared-folder": {
