--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -806,7 +806,8 @@
                 "add-folder": "新增文件夾",
                 "link-folder": "關聯文件夾",
                 "unlink-folder": "取消關聯文件夾",
-                "link-all": "關聯所有"
+                "link-all": "關聯所有",
+                "remove-from-the-list": "從列表中移除"
             }
         },
         "adding-shared-folder": {
