--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -323,6 +323,8 @@
                     "msg": {
                         "401": "Похоже Steam не хочет, чтобы мы скачали Beat Saber 😢",
                         "404": "Нет связи с серверами Steam.",
+                        "ExeNotFoundWindows": "Отсутствует \"DepotDownloader.exe\". Пожалуйста, проверьте, не находится ли исполняемый файл в карантине вашего антивируса.",
+                        "ExeNotFoundLinux": "Отсутствует исполняемый файл \"DepotDownloader\".",
                         "Password": "Неверный пароль.",
                         "InvalidCredentials": "Неверные учетные данные для входа, неразрешенное соединение или слишком много попыток входа.",
                         "NoManifest": "Файл манифеста не найден",
