--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -56,7 +56,9 @@
                 "skipsteam": "Steam überspringen",
                 "skipsteam-description": "Verhindert, dass Steam automatisch mit Beat Saber geöffnet wird. Aktivieren Sie dies, wenn Sie eine andere VR-Laufzeit wie WiVRn oder Monado verwenden, mit der SteamVR interferieren könnte.",
                 "map-editor": "Karteneditor",
-                "map-editor-description": "Starte den offiziellen Beat Saber-Karteneditor anstelle des Spiels."
+                "map-editor-description": "Starte den offiziellen Beat Saber-Karteneditor anstelle des Spiels.",
+                "proton-logs": "Proton-Logs",
+                "proton-logs-description": "Aktiviert die Aufzeichnung von Proton-Logs für diese Beat Saber-Installation auf \"{versionPath}\"."
             },
             "maps": {
                 "search-bar": {
