--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -56,7 +56,9 @@
                 "skipsteam": "Ignorer Steam",
                 "skipsteam-description": "Empêche Steam de s'ouvrir automatiquement avec Beat Saber, activez-le si vous utilisez un autre runtime VR comme WiVRn ou Monado avec lequel SteamVR pourrait interférer.",
                 "map-editor": "Éditeur de map",
-                "map-editor-description": "Lance l'éditeur officiel de map de Beat Saber au lieu du jeu."
+                "map-editor-description": "Lance l'éditeur officiel de map de Beat Saber au lieu du jeu.",
+                "proton-logs": "Journaux de Proton",
+                "proton-logs-description": "Active l'enregistrement des journaux Proton pour cette installation de Beat Saber sur \"{versionPath}\"."
             },
             "maps": {
                 "search-bar": {
