--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -24,7 +24,9 @@
         "unknown": "Неизвестная ошибка ¯\\_(ツ)_/¯",
         "warning": "Внимание",
         "continue": "Продолжить",
-        "shared": "Общий"
+        "shared": "Общий",
+        "pin": "Закрепить",
+        "unpin": "Открепить"
     },
     "title-bar": {
         "outdated": "устаревший"
@@ -48,7 +50,7 @@
                 "debug-description": "Включает окно логов для IPA. В окне будут отображаться логи модов.",
                 "outdated-tippy": "Эта версия устарела, и некоторые моды или функции могут работать не так, как ожидалось. Рекомендуется использовать рекомендуемую версию ({recommendedVersion}) Beat Saber, чтобы воспользоваться последними функциями и исправлениями ошибок.",
                 "advanced-launch": {
-                    "button": "Расширенный запуск",
+                    "button": "Параметры запуска",
                     "placeholder": "Параметры запуска, например: --revert; --nowait"
                 },
                 "skipsteam": "Пропустить Steam",
