--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -24,7 +24,9 @@
         "unknown": "Se ha producido un error desconocido ¯\\_(ツ)_/¯",
         "warning": "Advertencia",
         "continue": "Continuar",
-        "shared": "Compartido"
+        "shared": "Compartido",
+        "pin": "Fijar",
+        "unpin": "Desfijar"
     },
     "title-bar": {
         "outdated": "obsoleto"
@@ -48,7 +50,7 @@
                 "debug-description": "Habilita la ventana de registro de salida para IPA. Esto mostrará la consola de depuración que usan los mods.",
                 "outdated-tippy": "Esta versión está desactualizada, y algunos mods o funciones pueden no funcionar como se espera. Es mejor usar la versión recomendada ({recommendedVersion}) de Beat Saber para disfrutar de las últimas características y correcciones.",
                 "advanced-launch": {
-                    "button": "Opciones avanzadas",
+                    "button": "Opciones de lanzamiento",
                     "placeholder": "Argumentos adicionales ej: --revert; --no-wait"
                 }
             },
