--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -24,7 +24,9 @@
         "unknown": "알 수 없는 오류가 발생했습니다 (´・ω・`)",
         "warning": "경고",
         "continue": "계속",
-        "shared": "공유"
+        "shared": "공유",
+        "pin": "고정",
+        "unpin": "고정 해제"
     },
     "title-bar": {
         "outdated": "구식"
@@ -48,7 +50,7 @@
                 "debug-description": "IPA 출력 로그 창을 활성화하여 MOD의 디버그 콘솔을 표시합니다.",
                 "outdated-tippy": "이 버전은 오래되어 일부 모드나 기능이 예상대로 작동하지 않을 수 있습니다. 최신 기능과 버그 수정을 사용하려면 권장 버전({recommendedVersion})의 Beat Saber를 사용하는 것이 좋습니다.",
                 "advanced-launch": {
-                    "button": "고급 실행",
+                    "button": "실행 옵션",
                     "placeholder": "추가 인수 예: --revert; --nowait"
                 },
                 "skipsteam": "Steam 실행 건너뛰기",
