--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -54,7 +54,9 @@
                     "placeholder": "Weitere Argumente, bspw: --revert; --nowait"
                 },
                 "skipsteam": "Steam überspringen",
-                "skipsteam-description": "Verhindert, dass Steam automatisch mit Beat Saber geöffnet wird. Aktivieren Sie dies, wenn Sie eine andere VR-Laufzeit wie WiVRn oder Monado verwenden, mit der SteamVR interferieren könnte."
+                "skipsteam-description": "Verhindert, dass Steam automatisch mit Beat Saber geöffnet wird. Aktivieren Sie dies, wenn Sie eine andere VR-Laufzeit wie WiVRn oder Monado verwenden, mit der SteamVR interferieren könnte.",
+                "map-editor": "Karteneditor",
+                "map-editor-description": "Starte den offiziellen Beat Saber-Karteneditor anstelle des Spiels."
             },
             "maps": {
                 "search-bar": {
