--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -54,7 +54,9 @@
                     "placeholder": "Additional arguments ex: --revert; --nowait"
                 },
                 "skipsteam": "Skip Steam",
-                "skipsteam-description": "Stops Steam from opening automatically with Beat Saber, enable if you are using a different VR runtime like WiVRn or Monado that SteamVR may interfere with."
+                "skipsteam-description": "Stops Steam from opening automatically with Beat Saber, enable if you are using a different VR runtime like WiVRn or Monado that SteamVR may interfere with.",
+                "map-editor": "Map Editor",
+                "map-editor-description": "Start the official Beat Saber map editor instead of the game."
             },
             "maps": {
                 "search-bar": {
