--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -64,7 +64,9 @@
                         "delete-duplicate-maps": "Borrar duplicados"
                     },
                     "skipsteam": "Saltar Steam",
-                    "skipsteam-description": "Evita que Steam se abra automáticamente con Beat Saber, habilita esto si estás usando un runtime de VR diferente como WiVRn o Monado que SteamVR podría interferir."
+                    "skipsteam-description": "Evita que Steam se abra automáticamente con Beat Saber, habilita esto si estás usando un runtime de VR diferente como WiVRn o Monado que SteamVR podría interferir.",
+                    "map-editor": "Editor de mapas",
+                    "map-editor-description": "Inicia el editor oficial de mapas de Beat Saber en lugar del juego."
                 },
                 "tabs": {
                     "maps": {
