--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -54,7 +54,9 @@
                     "placeholder": "Arguments supplémentaires ex: --revert; --nowait"
                 },
                 "skipsteam": "Ignorer Steam",
-                "skipsteam-description": "Empêche Steam de s'ouvrir automatiquement avec Beat Saber, activez-le si vous utilisez un autre runtime VR comme WiVRn ou Monado avec lequel SteamVR pourrait interférer."
+                "skipsteam-description": "Empêche Steam de s'ouvrir automatiquement avec Beat Saber, activez-le si vous utilisez un autre runtime VR comme WiVRn ou Monado avec lequel SteamVR pourrait interférer.",
+                "map-editor": "Éditeur de map",
+                "map-editor-description": "Lance l'éditeur officiel de map de Beat Saber au lieu du jeu."
             },
             "maps": {
                 "search-bar": {
