--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -54,7 +54,9 @@
                     "placeholder": "額外啟動參數，例如: --revert; --nowait"
                 },
                 "skipsteam": "跳過 Steam",
-                "skipsteam-description": "防止 Steam 與 Beat Saber 自動打開，如果您使用的是其他 VR 執行時，如 WiVRn 或 Monado，SteamVR 可能會干擾，請啟用此選項。"
+                "skipsteam-description": "防止 Steam 與 Beat Saber 自動打開，如果您使用的是其他 VR 執行時，如 WiVRn 或 Monado，SteamVR 可能會干擾，請啟用此選項。",
+                "map-editor": "地圖編輯器",
+                "map-editor-description": "啟動官方的 Beat Saber 地圖編輯器，而不是遊戲。"
             },
             "maps": {
                 "search-bar": {
