--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -54,7 +54,9 @@
                     "placeholder": "额外启动参数，例如: --revert; --nowait"
                 },
                 "skipsteam": "跳过 Steam",
-                "skipsteam-description": "防止 Steam 与 Beat Saber 自动打开，如果您使用的是其他 VR 运行时，如 WiVRn 或 Monado，SteamVR 可能会干扰，请启用此选项。"
+                "skipsteam-description": "防止 Steam 与 Beat Saber 自动打开，如果您使用的是其他 VR 运行时，如 WiVRn 或 Monado，SteamVR 可能会干扰，请启用此选项。",
+                "map-editor": "地图编辑器",
+                "map-editor-description": "启动官方的 Beat Saber 地图编辑器，而不是游戏。"
             },
             "maps": {
                 "search-bar": {
