--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -364,8 +364,8 @@
                         "UNABLE_TO_GET_MANIFEST": "다운로드에 필요한 매니페스트를 가져올 수 없습니다.",
                         "VERIFY_INTEGRITY_FAILED": "파일 검증 중 오류가 발생했습니다.",
                         "SOME_FILES_FAILED_TO_DOWNLOAD": "일부 파일을 다운로드하지 못했습니다.",
-                        "OCULUS_LOGIN_TIMED_OUT": "로그인 토큰을 얻는 데 시간이 너무 오래 걸렸습니다.",
-                        "OCULUS_LOGIN_WINDOW_CLOSED_BY_USER": "Meta 로그인 창이 닫혔습니다.",
+                        "META_LOGIN_TIMED_OUT": "로그인 토큰을 얻는 데 시간이 너무 오래 걸렸습니다.",
+                        "META_LOGIN_WINDOW_CLOSED_BY_USER": "Meta 로그인 창이 닫혔습니다.",
                         "NO_META_AUTH_TOKEN": "다운로드에 필요한 Meta 로그인 토큰을 얻을 수 없습니다.",
                         "UNKNOWN_ERROR": "알 수 없는 오류가 발생했습니다."
                     }
