--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -279,6 +279,18 @@
                     "error-notification": {
                         "message": "エラーが発生しました。シンボリックリンク設定を変更できません。"
                     }
+                },
+                "use-system-proxy": {
+                    "title": "システムプロキシを使用",
+                    "description": "BSManagerはシステムプロキシを通じてネットワークリクエストを行います。",
+                    "modal": {
+                        "title": "再起動が必要",
+                        "body": "システムプロキシをオフにすると、BSManagerが終了して再起動します。本当にこれを実行しますか？",
+                        "confirm-btn": "はい、確かです"
+                    },
+                    "error-notification": {
+                        "message": "エラーが発生しました。システムプロキシ設定を変更できません。"
+                    }
                 }
             }
         }
