--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -279,6 +279,18 @@
                     "error-notification": {
                         "message": "오류가 발생했습니다. 심볼릭 링크 설정을 변경할 수 없습니다."
                     }
+                },
+                "use-system-proxy": {
+                    "title": "시스템 프록시 사용",
+                    "description": "BSManager는 시스템 프록시를 통해 네트워크 요청을 수행합니다.",
+                    "modal": {
+                        "title": "재시작이 필요합니다",
+                        "body": "시스템 프록시를 끄면 BSManager가 종료되고 재시작됩니다. 정말로 이렇게 하시겠습니까?",
+                        "confirm-btn": "네, 확실합니다"
+                    },
+                    "error-notification": {
+                        "message": "오류가 발생했습니다. 시스템 프록시 설정을 변경할 수 없습니다."
+                    }
                 }
             }
         }
