--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -279,6 +279,18 @@
                     "error-notification": {
                         "message": "Произошла ошибка, невозможно изменить настройки символических ссылок."
                     }
+                },
+                "use-system-proxy": {
+                    "title": "Использовать системный прокси",
+                    "description": "BSManager будет делать сетевые запросы через ваш системный прокси.",
+                    "modal": {
+                        "title": "Необходим перезапуск",
+                        "body": "Отключение системного прокси приведет к закрытию и перезапуску BSManager. Вы уверены, что хотите это сделать?",
+                        "confirm-btn": "Да, я уверен"
+                    },
+                    "error-notification": {
+                        "message": "Произошла ошибка, не удалось изменить настройки системного прокси."
+                    }
                 }
             }
         }
