--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -279,6 +279,18 @@
                     "error-notification": {
                         "message": "Ein Fehler ist aufgetreten, die Einstellungen für symbolische Links können nicht geändert werden."
                     }
+                },
+                "use-system-proxy": {
+                    "title": "System-Proxy verwenden",
+                    "description": "BSManager wird Netzwerkrequests über Ihren Systemproxy durchführen.",
+                    "modal": {
+                        "title": "Neustart erforderlich",
+                        "body": "Das Deaktivieren des Systemproxys beendet BSManager und startet ihn neu. Sind Sie sicher, dass Sie dies tun möchten?",
+                        "confirm-btn": "Ja, ich bin sicher"
+                    },
+                    "error-notification": {
+                        "message": "Es ist ein Fehler aufgetreten, die Systemproxyeinstellungen können nicht geändert werden."
+                    }
                 }
             }
         }
