--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -279,6 +279,18 @@
                     "error-notification": {
                         "message": "Une erreur s'est produite, impossible de changer les paramètres des liens symboliques."
                     }
+                },
+                "use-system-proxy": {
+                    "title": "Utiliser le proxy du système",
+                    "description": "BSManager effectuera des requêtes réseau via votre proxy système.",
+                    "modal": {
+                        "title": "Redémarrage nécessaire",
+                        "body": "Désactiver le proxy système fermera et relancera BSManager. Êtes-vous sûr de vouloir faire cela ?",
+                        "confirm-btn": "Oui, je suis sûr"
+                    },
+                    "error-notification": {
+                        "message": "Une erreur est survenue, impossible de modifier les paramètres du proxy système."
+                    }
                 }
             }
         }
