--- a/assets/jsons/translations/it.json
+++ b/assets/jsons/translations/it.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "English, Stati Uniti d'America",
                         "fr-FR": "Francese",
                         "es-ES": "Spagnolo",
+                        "it-IT": "Italiano",
                         "de-DE": "Tedesco",
                         "ru-RU": "Russo",
                         "zh-CN": "Cinese (Semplificato)",
