--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "Englisch, USA",
                         "fr-FR": "Französisch",
                         "es-ES": "Spanisch",
+                        "it-IT": "Italienisch",
                         "de-DE": "Deutsch",
                         "ru-RU": "Russisch",
                         "zh-CN": "Vereinfachtes Chinesisch",
