--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "English, USA",
                         "fr-FR": "French",
                         "es-ES": "Spanish",
+                        "it-IT": "Italian",
                         "de-DE": "German",
                         "ru-RU": "Russian",
                         "zh-CN": "Chinese (Simplified)",
