--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "Inglés, Estados Unidos",
                         "fr-FR": "Francés",
                         "es-ES": "Español",
+                        "it-IT": "Italiano",
                         "de-DE": "Alemán",
                         "ru-RU": "Ruso",
                         "zh-CN": "Chino simplificado",
