--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "Anglais, États-Unis",
                         "fr-FR": "Français",
                         "es-ES": "Espagnol",
+                        "it-IT": "Italien",
                         "de-DE": "Allemand",
                         "ru-RU": "Russe",
                         "zh-CN": "Chinois simplifié",
