--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "アメリカ英語",
                         "fr-FR": "フランス語",
                         "es-ES": "スペイン語",
+                        "it-IT": "イタリア語",
                         "de-DE": "ドイツ語",
                         "ru-RU": "ロシア語",
                         "zh-CN": "簡体字中国",
