--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "영어(미국)",
                         "fr-FR": "프랑스어",
                         "es-ES": "스페인어",
+                        "it-IT": "이탈리아어",
                         "de-DE": "독일어",
                         "ru-RU": "러시아어",
                         "zh-CN": "중국어 (간체)",
