--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "Английский, США",
                         "fr-FR": "Французский",
                         "es-ES": "Испанский",
+                        "it-IT": "Итальянец",
                         "de-DE": "Немецкий",
                         "ru-RU": "Русский",
                         "zh-CN": "Китайский (упрощенный)",
