--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "簡體中文",
@@ -220,6 +221,7 @@
                         "en-US": "美式英語",
                         "fr-FR": "法語",
                         "es-ES": "西班牙語",
+                        "it-IT": "義大利語",
                         "de-DE": "德語",
                         "ru-RU": "俄語",
                         "zh-CN": "簡體中文",
