--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -209,6 +209,7 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
+                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -220,6 +221,7 @@
                         "en-US": "美式英语",
                         "fr-FR": "法语",
                         "es-ES": "西班牙语",
+                        "it-IT": "意大利语",
                         "de-DE": "德语",
                         "ru-RU": "俄语",
                         "zh-CN": "简体中文",
