--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -854,14 +854,13 @@
             "stay": "Запомнить меня",
             "connect-to-meta": "Подключиться к Meta"
         },
-        "original-version-backup-oculus": {
-            "title": "Внимание",
-            "body": {
-                "must-be-installed-once": "Вы должны установить Beat Saber из магазина Oculus на этом устройстве, в противном случае Beat Saber автоматически закроется после запуска.",
-                "will-backup": "Для запуска этой версии исходная папка установки Beat Saber, находящаяся в вашей библиотеке Oculus, будет переименована и автоматически восстановлена при выходе из Beat Saber."
-            },
-            "not-remind-me": "Больше не напоминать",
-            "understood": "Понял"
+        "enable-oculus-sideloaded-apps": {
+            "title": "Включить Sideloading",
+            "info-1": "Чтобы запустить Beat Saber, необходимо включить возможность запуска приложений через sideloading. BSManager запросит права администратора для автоматического включения этой функции.",
+            "info-2": "Функция sideloading позволяет запускать игры, расположенные за пределами папки библиотеки Oculus.",
+            "info-3": "После активации сайдлоадинга функция останется активной, и вам больше не будет предложено её включить.",
+            "i-want-to-do-it-myself": "Я хочу сделать это сам",
+            "understood": "Понято"
         },
         "enter-meta-token": {
             "title": "Токен Oculus",
