--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -854,13 +854,12 @@
             "stay": "기억하기",
             "connect-to-meta": "Meta에 연결하기"
         },
-        "original-version-backup-oculus": {
-            "title": "주의",
-            "body": {
-                "must-be-installed-once": "이 장치에 Oculus 스토어에서 Beat Saber를 설치해야 합니다. 그렇지 않으면 Beat Saber가 실행 후 자동으로 종료됩니다..",
-                "will-backup": "이 버전을 실행하기 위해 Oculus 라이브러리에 있는 Beat Saber의 원래 설치 폴더의 이름이 변경되며, Beat Saber가 종료되면 자동으로 복원됩니다."
-            },
-            "not-remind-me": "다시 표시하지 않기",
+        "enable-oculus-sideloaded-apps": {
+            "title": "사이드로딩 활성화",
+            "info-1": "Beat Saber를 실행하려면 사이드로딩 앱을 실행할 수 있는 기능을 활성화해야 합니다. BSManager는 이 기능을 자동으로 활성화하기 위해 관리자 권한을 요청할 것입니다.",
+            "info-2": "사이드로딩 기능을 사용하면 Oculus 라이브러리 폴더 외부에 있는 게임을 실행할 수 있습니다.",
+            "info-3": "사이드로딩(sideloading)이 활성화되면 이 기능은 계속 활성 상태를 유지하며, 더 이상 활성화를 요청받지 않습니다.",
+            "i-want-to-do-it-myself": "스스로 하고 싶습니다",
             "understood": "알겠습니다"
         },
         "enter-meta-token": {
